Add subfile packages

--- a/source/fefu.cls
+++ b/source/fefu.cls
@@ -29,6 +29,7 @@
 \RequirePackage[style]{abstract}
 \RequirePackage{fancyhdr}
 \RequirePackage{enumitem}
+\RequirePackage{subfiles}
 \ifthenelse{\equal{\@FEFUhassubfigure}{false}}{
 	\RequirePackage{tocloft}
 }{
