Fix longer space

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -428,7 +428,7 @@
         \refstepcounter{@FEFUtable}
         \begin{tabular}{#2}
             \@FEFUcountcols%
-            \multicolumn{\@FEFUncols}{r@{}}{Т\kern 0.2em а\kern 0.2em б\kern 0.2em л
+            \multicolumn{\@FEFUncols}{r@{}}{Т\kern 0.2em а\kern 0.2em б\kern 0.2em л%
                 \kern 0.2em и\kern 0.2em ц\kern 0.2em а \the@FEFUtable\ --- #3}\\
         }{%
         \end{tabular}
