Set default mono font

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -456,6 +456,10 @@
 \title{}
 \author{}
 %    \end{macrocode}
+% Set mono font.
+%    \begin{macrocode}
+\setmonofont{Courier New}
+%    \end{macrocode}
 % Declare centered column type.
 %    \begin{macrocode}
 \newcommand{\PreserveBackslash}[1]{\let\temp=\\#1\let\\=\temp}
