--- a/example/document.tex
+++ b/example/document.tex
@@ -1,4 +1,4 @@
-\documentclass{fefu}
+\documentclass{fefu_thesis/cls/fefu}
 \usepackage{subfiles}
 
 % All necessary packages must be defined here
@@ -7,14 +7,11 @@
 \usepackage{dirtree}
 \usepackage{multirow}
 
-\setmonofont{Courier New}
-
 \renewcommand{\listingscaption}{Код программы}
 
 \author{Тыщенко Андрей Геннадьевич}
 \setgroup{М9119-09.04.01иибд}
 \setsupervisor{Ринчино Андрей Львович}{}
-%\setplace{Дальневосточный Федеральный Университет}
 
 \begin{document}
     \maketitle[2]{practice}
