--- a/example/subfiles/main.tex
+++ b/example/subfiles/main.tex
@@ -76,7 +76,7 @@
         По левому краю & По середине & По правому краю\\
         \hline
     \end{fefutable}
-    \begin{listing}[h]
+    \begin{listing}[H]
         \begin{minted}{latex}
 \begin{fefutable}{|l|c|r|}{Пример таблицы}
     \hline
@@ -89,4 +89,25 @@
         \end{minted}
         \caption{\label{sample}Пример использования \texttt{fefutable}}
     \end{listing}
+    \subsection{Установка}
+    \noindent Linux:\\
+    \indent\texttt{make install}\\
+    \noindent Windows:\\
+    \indent\texttt{install.ps1}\\
+    \noindent Ручная установка:\\
+    \indent\texttt{latex source/fefu.ins}\\
+    \indent\texttt{mkdir scr}\\
+    \indent\texttt{cp source/fefu.png cls}\\
+    \indent\texttt{cp fefu.cls cls}
+    \subsection{Использование}
+    \subsubsection{В качестве git submodule}
+    \noindent Добавить репозиторий как submodule в папку отчёта\\
+    \indent\texttt{git submodule add https://github.com/dvfu/fefu\_thesis.git}\\
+    \noindent или\\
+    \indent\texttt{git submodule add git@github.com:dvfu/fefu\_thesis.git}\\
+    \noindent Установить класс документа в основном файле \texttt{.tex}\\
+    \indent\texttt{\textbackslash documentclass\{fefu\_thesis/cls/fefu\}}
+    \subsubsection{В качестве локального класса}
+    \noindent Скопировать файлы \texttt{cls/fefu.tex} и \texttt{cls/fefu.png} в локальную директорию классов LaTeX. Установить класс документа в основном \texttt{.tex} файле отчёта\\
+    \indent\texttt{\textbackslash documentclass\{fefu\}}
 \end{document}
