--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -456,7 +456,7 @@
 %    \end{macrocode}
 % Set mono font.
 %    \begin{macrocode}
-\setmonofont{Courier New}
+\setmonofont[Scale=0.9]{Courier New}
 %    \end{macrocode}
 % Declare centered column type.
 %    \begin{macrocode}
