--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -344,8 +344,17 @@
 }
 %    \end{macrocode}
 % \end{macro}
+% \begin{macro}{\@FEFUcredentials}
+% Insert a field for person's credentials.
+%    \begin{macrocode}
+\newcommand{\@FEFUcredentials}[4][\textwidth]{%
+    \setlength{\@FEFUlength}{#1-\widthof{#2 }}%
+    \settowidth{\@FEFUcredentialslength}{#3 #4 \hspace{\@FEFUsignwidth}}%
+    \ifthenelse{\lengthtest{\@FEFUlength<\@FEFUcredentialslength}}{%
+        #2\\
+        \@FEFUlabeled{\uline{\hbox to #1{#3 #4\hfill}}}{ФИО, должность, подпись}%
     }{%
-        \@FEFUfield[подпись]{}{#1} \@FEFUshortname{#2}%
+        #2 \@FEFUlabeled{\uline{\hbox to \@FEFUlength{#3 #4\hfill}}}{ФИО, должность, подпись}%
     }%
 }
 %    \end{macrocode}
@@ -631,9 +640,9 @@
         \end{longtable}
         \stepcounter{@FEFUdiarycounter}%
         \renewcommand{\arraystretch}{1}%
-    \end{center}%
-    \if@FEFUoffsite\noindent\@FEFUpostfield[ФИО, должность, подпись]{Руководитель практики от предприятия }{}{\textwidth}\vskip 14pt\fi
-    \noindent\@FEFUpostfield[ФИО, должность, подпись]{Руководитель практики от университета }{}{\textwidth}
+    \end{center}%    
+    \noindent\@FEFUcredentials{Руководитель практики от университета}{\@FEFUifempty{\@FEFUsupervisor}{}{\@FEFUshortname{\@FEFUsupervisor}}}{\@FEFUsupervisortitle}
+    \if@FEFUoffsite\vskip 14pt\noindent\@FEFUcredentials{Руководитель практики от предприятия}{\@FEFUifempty{\@FEFUoffsitesupervisor}{}{\@FEFUshortname{\@FEFUoffsitesupervisor}}}{\@FEFUoffsitesupervisortitle}\fi
     \newpage
 }
 %    \end{macrocode}
