--- a/example/document.tex
+++ b/example/document.tex
@@ -11,7 +11,7 @@
 
 \author{Тыщенко Андрей Геннадьевич}
 \setgroup{М9119-09.04.01иибд}
-\setsupervisor{Ринчино Андрей Львович}{}
+\setsupervisor{Ринчино Андрей Львович}{доцент}
 
 \begin{document}
     \maketitle[2]{practice}
